--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-{{#> html }}
-<h1>👋 I'am Simon Häfliger, Product Owner at <a href="https://www.cyon.ch" class="text-employer decoration-none">cyon</a>. I love solving challenges with the help of humans and digital technology.</h1>
+{{#> html lang="en" }}
+<h1 class="fullwidth">
+  👋 I'am Simon Häfliger, Product Owner at
+  <a href="https://www.cyon.ch">cyon</a>. I love solving challenges with the
+  help of humans and digital technology.
+</h1>
 {{/html}}
