--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 {{#> html lang="en" }}
 <h1 class="fullwidth">
-  👋 I'am Simon Häfliger, Product Owner at
-  <a href="https://www.cyon.ch">cyon</a>. I love solving challenges with the
-  help of humans and digital technology.
+  👋 I'm Simon Häfliger, Digital Project Leader at
+  <a href="https://www.mobility.ch">Mobility</a>. I love solving challenges with
+  the help of humans and digital technology.
 </h1>
 {{/html}}
