--- a/readme.html
+++ b/readme.html
@@ -49,4 +49,87 @@
     </li>
   </ul>
 </section>
+<section>
+  <h2 class="fullwidth">So kommuniziere ich</h2>
+  <ul>
+    <li>Grundsätzlich möchte ich alles ansprechen können. Ich bin daher ein Freund von transparenter Kommunikation und wünsche mir, dass alle an einem Dialog beteiligte Personen Zugang zum nötigen Kontext haben. Dabei sehe ich es in der Verantwortung aller, sich den Kontext proaktiv zu erarbeiten oder nachzufragen.</li>
+    <li>Meine persönliche Meinung kann sehr stark wirken. Trotzdem ist mein Ziel immer ein Dialog. Lass dich also nicht direkt überzeugen und hinterfrage gerne meine Äusserungen.</li>
+    <li>Teilweise wirke ich etwas streng. Ich kann dir aber versichern, dass ich es immer gut meine. Frage also gerne nach, sollest du dich durch meine Aussagen irritiert fühlen oder Kontext vermissen.</li>
+    <li><b>mündlich</b> persönlich, Zoom, Slack, TeamSpeak, Around, Crewdle - jederzeit, idealerweise nach Absprache und mit etwas Kontext (kurz ansprechen oder direkt eine Termineinladung)</li>
+    <li><b>schriftlich</b> alle Kanäle - jederzeit, je nach aktueller Tätigkeit gebe ich in der Regel innerhalb von Minuten Antwort, sonst nach einem halben Arbeitstag gerne nochmals nachfragen</li>
+    <li>Wenn du Glück hast, erwischst du mich auf einem Kanal ausserhalb meiner Arbeitszeit. In einem solchen Fall antworte ich dir gerne. Bitte verlass dich aber nicht darauf, dass ich deine Nachrichten ausserhalb meiner Arbeitszeit lese.</li>
+  </ul>
+</section>
+<section>
+  <h2 class="fullwidth">Damit könnte ich dir auf die Nerven gehen</h2>
+  <ul>
+    <li>Ich bin ein Perfektionist. Sollte ich mich also in deinen Augen innerhalb der 20 % bewegen, die nach den 80 % folgen, sprich mich darauf an.</li>
+    <li>Ich mag Regeln und ich mache ungern Ausnahmen. Trotzdem sehe ich Ausnahmen als Möglichkeit, unsere Regeln zu überdenken.</li>
+    <li>Ich wiederhole mich. Wiederholungen sind für mich Teil einer klaren Kommunikation.</li>
+    <li>In der Regel sitze ich um 06:54 im Zug ab Luzern. Bitte erschrick nicht, solltest du dann schon Nachrichten von mir erhalten.</li>
+  </ul>
+</section>
+<section>
+  <h2 class="fullwidth">So gewinnst oder verlierst du mein Vertrauen</h2>
+  <ul>
+    <li>Am einfachsten gewinnst du mein Vertrauen, wenn du deine Arbeit und Handlungen nachvollziehbar und transparent gestaltest. Zusätzlich schätze ich es sehr, wenn du Interesse an Rückmeldungen zeigst und diese aktiv einholst.</li>
+    <li>Ich wünsche mir, dass du ehrlich mit mir bist, sowohl positiv wie auch negativ. Misstrauisch werde ich, wenn immer alles rund läuft. Die beste Unterstützung kann ich dir bieten, wenn ich weiss, was dich beschäftigt.</li>
+    <li>Ich vertraue gerne und schätze Eigeninitiative sehr. Trotzdem wünsche ich mir keine Alleingänge. Lass uns im richtigen Moment unsere Erkenntnisse mit dem Team teilen und reflektieren.</li>
+    <li>Eine gesunde Portion Selbstkritik finde ich sehr wertvoll.</li>
+  </ul>
+</section>
+<section>
+  <h2 class="fullwidth">Meine idealen Arbeitsbedingungen</h2>
+  <ul>
+    <li>Ich schätze eine ruhige Arbeitsumgebung ohne Ablenkung. Trotzdem darfst du mich jederzeit unterbrechen.</li>
+    <li>Ich möchte am Morgen wissen, was mich durch den Tag erwartet.</li>
+    <li>Gelegentliche Pausen mit gemeinsamem informellem Austausch sind für mich eine wertvolle Inspirationsquelle.</li>
+    <li>Ohne mein Notizbuch geht bei mir nur wenig. Ich bespreche Dinge daher nur ungern zwischen Tür und Angel.</li>
+  </ul>
+</section>
+<section>
+  <h2 class="fullwidth">Meine Stärken</h2>
+  <dl class="inline">
+    <dt>Vernetztes Denken</dt>
+    <dd>An Schnittstellen fühle ich mich wohl und ich kann dort meine Stärken ausspielen, als Übersetzer zu wirken und Dinge neu zu verknüpfen oder neu zu denken. Dabei stelle ich gerne Muster in Frage und versuche neue Wege zu finden.</dd>
+    <dt>Kommunikation</dt>
+    <dd>Für mich ist der Dialog ein wichtiges Werkzeug, um herauszufinden, ob wir auf dem richtigen Weg sind. Dabei möchte ich so viele Personen wie möglich ins Boot holen und ich mache gerne den ersten Schritt. Dazu gehört sowohl das teilen meiner Arbeit als auch das Erschliessen und Validieren neuer Perspektiven.</dd>
+    <dt>Katalysator</dt>
+    <dd>Ich entdecke und wecke gerne ungenutztes Potential, sowohl personell als auch technisch.</dd>
+  </dl>
+</section>
+<section>
+  <h2 class="fullwidth">Darin möchte ich besser werden</h2>
+  <dl class="inline">
+    <dt>Product Ownership</dt>
+    <dd>Ich komme ursprünglich aus den Umweltingenieurwissenschaften und fand über unseren Support den Weg zum Product Owner. Obwohl mir meine berufliche Vergangenheit einige wertvolle Werkzeuge auf den Weg gegeben hat, lerne ich täglich Neues und forme meine Rolle immer wieder weiter. Dazu nehme ich an Weiterbildungen und diversen Meetups teil.</dd>
+    <dt>Delegieren</dt>
+    <dd>Ich habe Mühe damit, Arbeit abzugeben. Das hat nicht mit mangelndem Vertrauen zu tun, sondern viel mehr damit, dass du in meinen Augen auch bereits genug zu tun hast. Lass mich also gerne wissen, solltest du freie Kapazitäten für die eine oder andere Aufgabe haben.</dd>
+    <dt>Abgrenzung</dt>
+    <dd>Ich fühle mich schnell verantwortlich und kann mich nur schwer von Herausforderungen abgrenzen. Teile mir also gerne mit, wenn du für den Moment auf meinen Einsatz verzichten kannst.</dd>
+    <dt>Entspannen</dt>
+    <dd>Ich bin schlecht im Frei und Ferien machen. Oft ertappe ich mich dabei mit Gedanken an die Arbeit. Bin gespannt auf deine Tipps, wie du dich entspannst.</dd>
+  </dl>
+</section>
+<section>
+  <h2 class="fullwidth">So gebe und nehme ich Rückmeldungen</h2>
+  <ul>
+    <li>Ich schätze direkte und zeitnahe Rückmeldungen, positiv wie negativ.</li>
+    <li>Wenn immer möglich wünsche ich mir persönliche Rückmeldungen (mündlich oder schriftlich).</li>
+    <li>Meine Rückmeldungen können hart wirken. Bitte frage bei Unklarheiten nach oder melde mir dein Gefühl direkt zurück.</li>
+  </ul>
+</section>
+<section>
+  <h2 class="fullwidth">Troubleshooting</h2>
+  <dl class="qa">
+    <dt>Warum erhalte ich keine Antwort?</dt>
+    <dd>Simon ist wahrscheinlich in einer Besprechung. Er meldet sich spätestens innerhalb eines halben Arbeitstages bei dir.</dd>
+    <dt>Warum ist Simon so ruhig?</dt>
+    <dd>Wahrscheinlich ist er wieder einmal in Gedanken vertieft. Gerne kurz nachfragen, falls er dabei ein zu ernstes Gesicht macht.</dd>
+    <dt>Darf ich Simon Fragen zu Umweltthemen stellen?</dt>
+    <dd>Natürlich! Bitte erwarte dabei aber nicht eine abschliessende Antwort.</dd>
+    <dt>Stört es Simon, wenn ich sein Büro-Material ausleihe?</dt>
+    <dd>Wenn du es mir rechtzeitig und unversehrt zurückbringst, nein. Fehlendes Material ohne Hinweis auf den Verbleib mag ich jedoch gar nicht.</dd>
+  </dl>
+</section>
 {{/html}}
